--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@preline/select": "^2.0.0",
+    "next": "14.0.2",
+    "preline": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
