--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.4",
+    "@preline/overlay": "^2.0.0",
     "@preline/select": "^2.0.0",
     "next": "14.0.2",
     "preline": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-select": "^5.8.0"
+    "react-google-recaptcha": "^3.1.0",
+    "react-select": "^5.8.0",
+    "react-simple-captcha": "^9.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
