--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@preline/overlay": "^2.0.0",
     "@preline/select": "^2.0.0",
     "next": "14.0.2",
-    "preline": "^2.0.0",
+    "preline": "^1.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
@@ -21,8 +21,10 @@
     "react-simple-captcha": "^9.3.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.5",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.3"
   }
 }
